add securedTransfer
