# src/main/kotlin/com/wutsi/platform/account/dto/Account.kt
@@ -1,10 +1,7 @@
 package com.wutsi.platform.account.dto
 
-import org.springframework.format.`annotation`.DateTimeFormat
+import org.springframework.format.annotation.DateTimeFormat
 import java.time.OffsetDateTime
-import kotlin.Boolean
-import kotlin.Long
-import kotlin.String
 
 public data class Account(
     public val id: Long = 0,
@@ -18,5 +15,6 @@ public data class Account(
     public val created: OffsetDateTime = OffsetDateTime.now(),
     @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ")
     public val updated: OffsetDateTime = OffsetDateTime.now(),
-    public val superUser: Boolean = false
+    public val superUser: Boolean = false,
+    public val transferSecured: Boolean = true
 )
